Fix spacing in Nero ratings display

--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -293,7 +293,7 @@ input:checked+.slider:before {
 /* remove polldaddy ratings */
 
 .rating-nero-value {
-    display: none;
+    visibility: hidden
 }
 
 /*
